--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "d3": "^3.5.16",
     "lodash": "^4.6.1",
     "react": "^0.14.3",
+    "react-bootstrap": "^0.28.4",
     "react-dom": "^0.14.3",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1"
